[package]
name = "cubekey"
version = "0.1.0"
authors = ["Kazuhiro.Yabe <Kazuhiro.Yabe@gmail.com>"]
edition = "2018"

[dependencies]
core_cube = { path = "./core_cube" }
enigo = "0.0.13"
lazy_static = "1.4.0"
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4.8"
env_logger = "0.7.1"
clap = "2.33.0"
rand = "0.8"


